--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,47 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
+dist/
+.eggs/
+*.egg-info/
+*.egg
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Jupyter
+.ipynb_checkpoints/
+.jupyter/
+
+# Logs and artifacts
+logs/
+artifacts/
+*.log
+
+# OS files
+.DS_Store
+
+# Tooling
+.mypy_cache/
+.pytest_cache/
+ruff_cache/
+
+# IDEs
+.vscode/
+.idea/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
 develop-eggs/
 dist/
 downloads/
